# ofxstatement-sjprio

./: Pipfile  pyproject.toml
.github/workflows/: test.yml
src/ofxstatement_sjprio/: plugin.py
tests/: Transaktioner_Mitt SJ Prio Mastercard.xlsx  test_sjprio.py
