[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-sjprio"
version = "0.0.2"
authors = [
  { name="Andrey Lebedev", email="andrey@lebedev.lt" },
  { name="gurkodil", email="18744409+gurkodil@users.noreply.github.com" },
]
description = "SJPrio plugin for ofxstatement"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement"]
dependencies = [
  "ofxstatement",
  "openpyxl",
]

[project.urls]
Homepage = "https://github.com/gurkodil/ofxstatement-sjprio"

[project.entry-points."ofxstatement"]
sjprio = "ofxstatement_sjprio.plugin:SJPrioPlugin"
